# vast-mining-sim

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yaml
cmake/: modules.cmake
docs/: architecture.md  developer_guide.md  sample_results_report.md  user_guide.md
include/: controller.h  event.h  heap.h  logger.h  mine_manager.h  minutes.h  random.h  report.h  station_manager.h  truck_manager.h
scripts/: plot_report.py
source/: CMakeLists.txt  controller.cpp  event.cpp  logger.cpp  main.cpp  mine_manager.cpp  random.cpp  report.cpp  station_manager.cpp  truck_manager.cpp
test/: CMakeLists.txt  controller.test.cpp  logger.test.cpp  main.test.cpp  metrics.test.cpp  mine_manager.test.cpp  random.test.cpp  station_manager.test.cpp  truck_manager.test.cpp
